--- a/test/fixtures/currencies.yml
+++ b/test/fixtures/currencies.yml
@@ -32,6 +32,7 @@
 #  lock_version :integer          default(0), not null
 #  name         :string(255)      not null
 #  rate         :decimal(16, 6)   default(1.0), not null
+#  symbol       :string(255)      default("-"), not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
@@ -49,6 +50,7 @@
 #   id: 1
 #   name: "Lorem ipsum"
 #   rate: 0
+#   symbol: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
