--- a/test/fixtures/sale_order_lines.yml
+++ b/test/fixtures/sale_order_lines.yml
@@ -40,6 +40,7 @@
 #  product_id          :integer          not null
 #  quantity            :decimal(16, 4)   default(1.0), not null
 #  reduction_origin_id :integer          
+#  reduction_percent   :decimal(16, 2)   default(0.0), not null
 #  tax_id              :integer          
 #  tracking_id         :integer          
 #  unit_id             :integer          not null
@@ -62,6 +63,7 @@
 #   price_id: 1
 #   product_id: 1
 #   quantity: 0
+#   reduction_percent: 0
 #   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
