--- a/test/fixtures/journal_records.yml
+++ b/test/fixtures/journal_records.yml
@@ -37,7 +37,7 @@
 #  journal_id      :integer          not null
 #  lock_version    :integer          default(0), not null
 #  number          :string(255)      not null
-#  position        :integer          not null
+#  position        :integer          
 #  printed_on      :date             not null
 #  resource_id     :integer          
 #  resource_type   :string(255)      
@@ -63,7 +63,6 @@
 #   id: 1
 #   journal_id: 1
 #   number: "Lorem ipsum"
-#   position: 0
 #   printed_on: 2009-07-19
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
