Add support *PaymentPart
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1533 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/sale_payment_parts.yml
+++ b/test/fixtures/sale_payment_parts.yml
@@ -20,18 +20,19 @@
 # 
 # == Table: sale_payment_parts
 #
-#  amount       :decimal(16, 2)   
-#  company_id   :integer          not null
-#  created_at   :datetime         not null
-#  creator_id   :integer          
-#  downpayment  :boolean          not null
-#  expense_id   :integer          default(0), not null
-#  expense_type :string(255)      default("UnknownModel"), not null
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  payment_id   :integer          not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer          
+#  amount            :decimal(16, 2)   
+#  company_id        :integer          not null
+#  created_at        :datetime         not null
+#  creator_id        :integer          
+#  downpayment       :boolean          not null
+#  expense_id        :integer          default(0), not null
+#  expense_type      :string(255)      default("UnknownModel"), not null
+#  id                :integer          not null, primary key
+#  journal_record_id :integer          
+#  lock_version      :integer          default(0), not null
+#  payment_id        :integer          not null
+#  updated_at        :datetime         not null
+#  updater_id        :integer          
 #
 #
 # == Fixture: sale_payment_parts
