--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -22,6 +22,8 @@
 #
 #  active                    :boolean          default(TRUE), not null
 #  activity_code             :string(32)       
+#  attorney                  :boolean          not null
+#  attorney_account_id       :integer          
 #  authorized_payments_count :integer          
 #  born_on                   :date             
 #  category_id               :integer          
@@ -77,6 +79,7 @@
 #
 # entities_001:
 #   active: true
+#   attorney: true
 #   client: true
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
