--- a/test/fixtures/sale_payment_modes.yml
+++ b/test/fixtures/sale_payment_modes.yml
@@ -20,23 +20,23 @@
 # 
 # == Table: sale_payment_modes
 #
-#  account_id            :integer          
-#  cash_id               :integer          
-#  commission_account_id :integer          
-#  commission_amount     :decimal(16, 2)   default(0.0), not null
-#  commission_percent    :decimal(16, 2)   default(0.0), not null
-#  company_id            :integer          not null
-#  created_at            :datetime         not null
-#  creator_id            :integer          
-#  id                    :integer          not null, primary key
-#  lock_version          :integer          default(0), not null
-#  name                  :string(50)       not null
-#  published             :boolean          
-#  updated_at            :datetime         not null
-#  updater_id            :integer          
-#  with_accounting       :boolean          not null
-#  with_commission       :boolean          not null
-#  with_embankment       :boolean          not null
+#  cash_id                :integer          
+#  commission_account_id  :integer          
+#  commission_amount      :decimal(16, 2)   default(0.0), not null
+#  commission_percent     :decimal(16, 2)   default(0.0), not null
+#  company_id             :integer          not null
+#  created_at             :datetime         not null
+#  creator_id             :integer          
+#  embankables_account_id :integer          
+#  id                     :integer          not null, primary key
+#  lock_version           :integer          default(0), not null
+#  name                   :string(50)       not null
+#  published              :boolean          
+#  updated_at             :datetime         not null
+#  updater_id             :integer          
+#  with_accounting        :boolean          not null
+#  with_commission        :boolean          not null
+#  with_embankment        :boolean          not null
 #
 #
 # == Fixture: sale_payment_modes
@@ -57,6 +57,7 @@
 #
 
 sale_payment_modes_001:
+  cash_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -64,8 +65,10 @@ sale_payment_modes_001:
   name: "Lorem ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  with_accounting: true
 
 sale_payment_modes_002:
+  cash_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -73,4 +76,5 @@ sale_payment_modes_002:
   name: "Lorem ipsum 2"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  with_accounting: true
 
