Fix a lot of problem in sale process and begins to check to_accountancy process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1537 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -398,6 +398,7 @@ manage_estimates:
   - sale_order_duplicate
   - sale_order_line_create
   - sale_order_line_delete
+  - sale_order_line_detail
   - sale_order_line_informations
   - sale_order_line_stocks
   - sale_order_line_tracking
