Finish to clean accountize process and add better translation of sale_payment and purchase_payment in French
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1538 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -192,6 +192,7 @@ manage_accounts:
   - account
   - account_create
   - account_delete
+  - account_entities_dyta
   - account_journal_entries_dyta
   - account_update
   - accounts
