--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -60,6 +60,7 @@
 #  updated_at                 :datetime         not null
 #  updater_id                 :integer          
 #  weight                     :decimal(16, 3)   
+#  with_tracking              :boolean          not null
 #
 #
 # == Fixture: products
@@ -86,6 +87,7 @@
 #   unquantifiable: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   with_tracking: true
 #
 
 products_001:
