--- a/test/fixtures/purchase_payments.yml
+++ b/test/fixtures/purchase_payments.yml
@@ -27,6 +27,7 @@
 #  created_at        :datetime         not null
 #  created_on        :date             
 #  creator_id        :integer          
+#  delivered         :boolean          default(TRUE), not null
 #  id                :integer          not null, primary key
 #  journal_record_id :integer          
 #  lock_version      :integer          default(0), not null
@@ -48,6 +49,7 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   delivered: true
 #   id: 1
 #   mode_id: 1
 #   parts_amount: 0
