Fix some stuff need more stuff
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1541 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -103,6 +103,7 @@ consult_entities:
   - entity_events_dyta
   - entity_invoices_dyta
   - entity_purchase_orders_dyta
+  - entity_purchase_payments_dyta
   - entity_sale_orders_dyta
   - entity_sale_payments_dyta
   - entity_subscriptions_dyta
