Add better support for purchase payments
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1542 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -544,14 +544,15 @@ manage_payment_modes:
   controller: management
   actions:
   - index
-  - payment_modes
   - purchase_payment_mode_create
   - purchase_payment_mode_delete
   - purchase_payment_mode_update
+  - purchase_payment_modes
   - purchase_payment_modes_dyta
   - sale_payment_mode_create
   - sale_payment_mode_delete
   - sale_payment_mode_update
+  - sale_payment_modes
   - sale_payment_modes_dyta
 # Gérer les prix
 manage_prices:
