Update some stuff about enbankments
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1547 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -290,7 +290,7 @@ manage_document_templates:
   - document_templates_dyta
   - document_templates_load
   - index
-# Gérer les remises de chèques
+# Gérer les remises en banque
 manage_embankments:
   controller: management
   actions:
