Fixes the lettering process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1552 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -387,6 +387,7 @@ manage_entries:
   - journals
   - journals_dyta
   - lettering
+  - unlettered_journal_entries_dyta
 # Créer, modifier des devis
 manage_estimates:
   controller: management
