--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -75,6 +75,7 @@ journal_entries_001:
   debit: 0
   draft: true
   id: 1
+  journal_id: 1
   name: "Lorem ipsum"
   record_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -92,6 +93,7 @@ journal_entries_002:
   debit: 0
   draft: true
   id: 2
+  journal_id: 1
   name: "Lorem ipsum 2"
   record_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
