Add general ledger in accountancy
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1561 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -90,7 +90,7 @@ configure_company:
 # Consulter les documents comptables
 consult_accounting_documents:
   controller: accountancy
-  actions: [balance, document_print, index]
+  actions: [balance, document_print, general_ledger, general_ledger_dyta, index]
 # Consulter les fiches clients/fournisseurs
 consult_entities:
   controller: relations
