Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1566 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -606,6 +606,8 @@ manage_purchases:
   - purchase_payment_update
   - purchase_payments
   - purchase_payments_dyta
+  - purchase_products_dyli
+  - suppliers_dyli
 # Gérer les types de vente
 manage_sale_order_natures:
   controller: management
