Begins to fix some bugs but one very important remaining INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1575 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -30,6 +30,7 @@ __minimum__:
   - relations::entities_dyli
   - relations::recent_events_dyta
   - relations::user_future_events_dyta
+  - production::shapes_map
 # Droit par défaut (inaccessible)
 __not_used__:
   actions:
